<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.3">
  <DUT Name="IO_Out_Typ" Id="{149d309e-ab7e-4549-97b0-caa6b2394eba}">
    <Declaration><![CDATA[TYPE IO_Out_Typ :
STRUCT
	HeaterOn  		 			AT %Q* 	: BOOL;
	GripperOpen 	 			AT %Q* 	: BOOL;
	Output_GripperClose 	 			AT %Q* 	: BOOL;
	Output_GripperOpen 	 			AT %Q* 	: BOOL;
	GripperRetract 	 			AT %Q* 	: BOOL;
	GripperPistonPosition 		AT %Q* 	: BOOL;
	PressDown			 	 AT %Q* 	: BOOL;
	
	ExternalNipMotor			 	 AT %Q* 	: BOOL;
	
	Buzzer			 	 AT %Q* 	: BOOL;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>