<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.3">
  <GVL Name="GVL" Id="{4b8145be-4d6d-414d-9431-dfe7527fbc75}">
    <Declaration><![CDATA[//{attribute 'qualified_only'}
VAR_GLOBAL
gMachineCtrl: Ctrl_Typ;
	
FB_Machine_Ctrl:FB_Machine_Ctrl;
FB_Machine_Run:FB_Machine_Run;
FB_Mechinit:FB_Mechinit;
FB_OFF:FB_OFF;
FB_Mechinit_Output:FB_MechinitOutput;

FB_RW_Ctrl:FB_RW_Ctrl;
RwInverter :FB_INV;


//WebHandling
	UW_1_AxisFB			: Beck5xxxAxis_FB;
	UW_1_MultiAxisFB	: MultiAxis_FB;
	UW_1_CyclicAxisFB	: CyclicAxis_FB;
	
	UW_2_AxisFB			: Beck5xxxAxis_FB;
	UW_2_MultiAxisFB	: MultiAxis_FB;
	UW_2_CyclicAxisFB	: CyclicAxis_FB;	
	
	Output_AxisFB		: ElmoBasicAxis_FB;
//	Uutput_MultiAxisFB	: MultiAxis_FB;
//	Uutput_CyclicAxisFB	: CyclicAxis_FB;
	
	UwVmaster_AxisFB		: CoE_BasicAxis_FB;
	
	//UW_MotorFailureReportFB 		: MotorFailureReport_FB;
	//UWMaster_MotorFailureReportFB 	: MotorFailureReport_FB;
	
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>